# mucgpt

./: .coderabbit.yaml  .dockerignore  .env  .env_template  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CHAT_PERSISTENCE.md  CODE_OF_CONDUCT.md  DESIGN.md  Dockerfile  LICENSE  LICENSE.md  PRODUCT.md  README.md  READMEOLD.md  azure.yaml  docker-compose.yml  eslint.config.mjs  index.html  notes.md  package-lock.json  package.json  pre-commit-npm-fix.bat  publiccode.yml  pyproject.toml  renovate.json  renovate.json5  requirements-dev.in  requirements-dev.txt  skills-lock.json  tag-version.ps1  todos.md
mucgpt-assistant-service/: .dockerignore  .python-version  DATABASE_TROUBLESHOOTING.md  Dockerfile  check_env.py  config.yaml.example  debug_db_config.py  pyproject.toml  pytest.ini  run_tests.py  setup.py
mucgpt-assistant-service-migrations/: .python-version  Dockerfile  pyproject.toml  test_db_connection.py
mucgpt-assistant-service-migrations/migrations/: alembic.ini  env.py  run_migrations.py  settings.py
mucgpt-assistant-service-migrations/migrations/models/: __init__.py  base.py
mucgpt-assistant-service-migrations/migrations/versions/: 0001_initial_migration.py  0002_add_subscriptions.py  0003_add_assistant_visibility.py  0004_add_subscriptions_count.py  0005_rename_lhmobjektid_to_user_id.py  0006_add_default_model.py  0007_remove_max_output_tokens.py  0008_convert_temperature_to_creativity.py  0009_add_owner_profile_cache_columns.py
mucgpt-assistant-service/app/: app.py  backend.py  utils.py
mucgpt-assistant-service/app/api/: api_models.py
mucgpt-assistant-service/app/config/: settings.py
mucgpt-assistant-service/app/core/: auth.py  auth_models.py  directory_cache.py  owner_enrichment.py
mucgpt-assistant-service/app/database/: __init__.py  assistant_repo.py  database_models.py  path_matcher.py  repo.py  session.py  subscription_events.py
mucgpt-assistant-service/migrations/: env.py
mucgpt-assistant-service/scripts/: check_hierarchical_access.py  dump_ldap_directory.py  test_user_lookup.py
mucgpt-assistant-service/src/: __init__.py  app.py  backend.py  logconf.yaml  utils.py
mucgpt-assistant-service/src/api/: api_models.py  exceptions.py  models.py
mucgpt-assistant-service/src/config/: configuration.py  models.py  settings.py  version.py
mucgpt-assistant-service/src/core/: auth.py  auth_models.py  cache.py  directory_cache.py  log_utils.py  logtools.py
mucgpt-assistant-service/src/database/: __init__.py  assistant_repo.py  database_models.py  models.py  path_matcher.py  repo.py  session.py  subscription_events.py
mucgpt-assistant-service/tests/: README.md  conftest.py  shared_directory_tree.py
mucgpt-assistant-service/tests/database/: env.py  test_assistant_repo.py  test_migrations.py  test_path_matcher.py  test_repo.py  test_session.py
mucgpt-assistant-service/tests/integration/: conftest.py  test_assistants_router.py  test_backend.py  test_department_router.py  test_subscription.py  test_system_router.py  test_tools_router.py  test_users_router.py
mucgpt-assistant-service/tests/unit/: test_directory_cache.py  test_ldap_person_loader.py  test_organization_tree_builder.py  test_owner_enrichment.py  test_settings.py
mucgpt-core-service/: .dockerignore  .gitignore  Dockerfile  config.yaml.example  departements.json  pyproject.toml
mucgpt-core-service/app/: backend.py  init_app.py  logconf.yaml
mucgpt-core-service/app/agent/: agent.py  agent_executor.py  data_service.py  middleware.py  react_agent.py
mucgpt-core-service/app/api/: api_models.py
mucgpt-core-service/app/config/: checkpointer_provider.py  langfuse_provider.py  llm_configs.py  model_provider.py  settings.py
mucgpt-core-service/app/core/: atlassian_oauth.py  auth_models.py  cache.py  llm_helpers.py  log_utils.py  text_processor.py
mucgpt-core-service/app/create_assistant/: prompt_for_systemprompt.md
mucgpt-core-service/app/database/: __init__.py  base.py  conversation_repo.py  models.py  repo.py  session.py
mucgpt-core-service/app/parsing/: base.py  factory.py  xberg.py
mucgpt-core-service/app/summarize/: summarize.py
mucgpt-core-service/roadmaps/chat-persistence/: 01-deps-and-db-settings.md  02-db-session-and-repository.md  03-db-models-conversation-message.md  04-conversation-api-models.md  05-conversation-repository.md  06-conversations-router-crud.md  07-persist-chat-completions.md  08-checkpointer-provider.md  09-wire-checkpointer-into-agent.md  10-resume-and-state-endpoint.md  11-fake-model-test-fixture.md  12-tests-db-unit.md  13-tests-conversations-integration.md  14-tests-offline-e2e-and-checkpoint.md  README.md
mucgpt-core-service/roadmaps/deletion-tombstones/: 01-add-deleted-at-column.md  02-soft-delete-in-repository.md  03-anti-resurrection-and-tombstone-query.md  04-api-models.md  05-delete-and-read-endpoints.md  06-tombstone-feed-endpoint.md  07-frontend-client-and-types.md  08-apply-remote-deletions-in-sync.md  09-local-delete-and-race-hardening.md  10-backend-tests.md  11-frontend-tests.md  12-docs-migration-and-retention.md  README.md
mucgpt-core-service/roadmaps/optimistic-concurrency/: 01-add-revision-column.md  02-bump-revision-on-mutations.md  03-conflict-check-in-repository.md  04-api-models.md  05-chat-router-nonstreaming.md  06-streaming-revision-event.md  07-frontend-models-and-storage.md  08-send-and-capture-revision.md  09-conflict-handling.md  10-backend-tests.md  11-frontend-tests.md  12-docs-and-migration.md  README.md
mucgpt-core-service/src/: app.py  backend.py  init_app.py  logconf.yaml
mucgpt-core-service/src/agent/: __init__.py  agent.py  agent_executor.py  data_service.py  (+4 more)
mucgpt-data-service/: Dockerfile  pyproject.toml
mucgpt-data-service/src/: api.py  app.py  kreuzberg.py  logconf.yaml
mucgpt-doc-service/: .dockerignore  Dockerfile  app.py  logconf.yaml  pyproject.toml
mucgpt-doc-service/src/: .env.example  api.py  app.py  docling.py  logconf.yaml  rerank.py
mucgpt-memory-service/: .dockerignore  Dockerfile  pyproject.toml
mucgpt-memory-service/app/: backend.py  kreuzberg.py  logconf.yaml
(+926 files in other folders)
