[project]
name = "MUCGPT"
version = "1.2.5"
description = "a web interface for large language models for the public administration"
readme = "README.md"
requires-python= ">=3.10"
authors = [
    { name = "Michael Jaumann", email = "michael.jaumann@muenchen.de" },
    { name = "Paul Ilitz", email = "paul.ilitz@muenchen.de" },
]
maintainers = [
    { name = " ITM KICC", email = "itm.kicc@muenchen.de" },
    { name = "Michael Jaumann", email = "michael.jaumann@muenchen.de" },
    { name = "Paul Ilitz", email = "paul.ilitz@muenchen.de" },
]

[tool.uv]
dev-dependencies = [
    "ipykernel==6.30.0",
    "pre-commit==4.2.0",
    "ruff==0.12.5",
]

[[tool.uv.index]]
name = "pypy"
url = "https://pypi.org/simple"

[tool.ruff]
target-version = "py38"
src = ["mucgpt-core-service/src/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E701"] # line too long, multiple statements on one line

[tool.pytest.ini_options]
addopts = "-ra --cov"
pythonpath = ["mucgpt-core-service/src/"]
testpaths = [
    "tests"]
markers = [
    "integration: mark a test as a integration test",
    "unit: mark test as a unit test"
]
