[project]
name = "mucgpt-assistant-service-migrations"
version = "0.3.0"
description = "Migrations for mucgpt-assistant-service"
authors = [
    { name = "Michael Jaumann", email = "michael.jaumann@muenchen.de" },
    { name = "Paul Ilitz", email = "paul.ilitz@muenchen.de" },
]
maintainers = [
    { name = " ITM KICC", email = "itm.kicc@muenchen.de" },
    { name = "Michael Jaumann", email = "michael.jaumann@muenchen.de" },
    { name = "Paul Ilitz", email = "paul.ilitz@muenchen.de" },
]
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings[yaml]>=2.10.1",
    "sqlalchemy>=2.0.41",
]

[tool.uv]
dev-dependencies = []

[[tool.uv.index]]
name = "pypy"
url = "https://pypi.org/simple"
