[project]
name = "mucgpt-assistant-service-migrations"
version = "0.4.0"
description = "Migrations for mucgpt-assistant-service"
authors = [
    { name = "Michael Jaumann", email = "michael.jaumann@muenchen.de" },
    { name = "Paul Ilitz", email = "paul.ilitz@muenchen.de" },
]
maintainers = [
    { name = " ITM KICC", email = "itm.kicc@muenchen.de" },
    { name = "Michael Jaumann", email = "michael.jaumann@muenchen.de" },
    { name = "Paul Ilitz", email = "paul.ilitz@muenchen.de" },
]
requires-python = "==3.14.4"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.12",
    "pydantic-settings[yaml]==2.14.0",
    "sqlalchemy==2.0.49",
]

[[tool.uv.index]]
name = "pypy"
url = "https://pypi.org/simple"
