[project]
name = "mucgpt-core-service"
version = "0.8.0"
description = "a web interface for large language models for the public administration"
readme = "README.md"
requires-python= ">=3.10"
authors = [
    { name = "Michael Jaumann", email = "michael.jaumann@muenchen.de" },
    { name = "Paul Ilitz", email = "paul.ilitz@muenchen.de" },
]
maintainers = [
    { name = " ITM KICC", email = "itm.kicc@muenchen.de" },
    { name = "Michael Jaumann", email = "michael.jaumann@muenchen.de" },
    { name = "Paul Ilitz", email = "paul.ilitz@muenchen.de" },
]

dependencies = [
    "fastapi[standard]==0.118.0",
    "langchain==0.3.27",
    "langchain-core==1.2.11",
    "langchain_community==0.3.31",
    "langchain-openai==0.3.35",
    "openai==1.109.1",
    "langsmith==0.6.3",
    "joserfc",
    "pypdf==6.6.2",
    "uvicorn==0.37.0",
    "asgi-correlation-id==4.3.4",
    "pydantic-settings>=2.8.1",
    "langgraph>=0.6.0",
    "truststore>=0.10.4",
    "langfuse>=3.3.4",
    "httpx==0.28.1",
    "langchain-mcp-adapters==0.1.12",
    "redis==7.1.0",
    "cloudpickle==3.1.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel==6.30.1",
    "pre-commit==4.3.0",
    "ruff==0.14.0",
    "pytest-env",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-snapshot",
    "pytest-mock==3.15.1",
    "coverage==7.10.7",
    "pytest-cov==7.0.0"
]

[[tool.uv.index]]
name = "pypy"
url = "https://pypi.org/simple"

[tool.ruff]
target-version = "py38"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E701"] # line too long, multiple statements on one line

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --verbose --tb=short -ra --cov=src"
pythonpath = ["src/"]
testpaths = [
    "tests"]
markers = [
    "integration: mark a test as a integration test",
    "unit: mark test as a unit test"
]
env = [
    "MUCGPT_CORE_LOG_CONFIG=src/logconf.yaml",
    "MUCGPT_CORE_VERSION=0.0",
    "MUCGPT_CORE_COMMIT=12012lf",
    '''MUCGPT_CORE_MODELS=[{{"type": "AZURE", "llm_name": "mucgpt-test-model", "deployment": "mucgpt-test-model", "endpoint": "https://testprovider.api", "api_key": "blub", "max_output_tokens": 16384, "max_input_tokens": 128000, "description": "Model developed by kicc. "}}]''',
    "GIT_PYTHON_REFRESH=quiet"
]

[tool.coverage.paths]
source = ["scripts", "src"]

[tool.coverage.report]
show_missing = true
