[project]
name = "mucgpt-core-service"
version = "0.9.1"
description = "a web interface for large language models for the public administration"
readme = "README.md"
requires-python= ">=3.13"
authors = [
    { name = "Michael Jaumann", email = "michael.jaumann@muenchen.de" },
    { name = "Paul Ilitz", email = "paul.ilitz@muenchen.de" },
]
maintainers = [
    { name = " ITM KICC", email = "itm.kicc@muenchen.de" },
    { name = "Michael Jaumann", email = "michael.jaumann@muenchen.de" },
    { name = "Paul Ilitz", email = "paul.ilitz@muenchen.de" },
]

dependencies = [
    "fastapi[standard]>=0.135.1",
    "langchain==1.2.15",
    "langchain-core==1.2.26",
    "langchain_community==0.4.1",
    "langchain-openai==1.1.12",
    "openai==2.30.0",
    "langsmith==0.7.26",
    "joserfc",
    "pypdf>=6.9.2",
    "uvicorn>=0.42.0",
    "asgi-correlation-id>=4.3.4",
    "pydantic-settings>=2.8.1",
    "langgraph>=1.1.3",
    "truststore>=0.10.4",
    "langfuse>=4.0.1",
    "httpx>=0.28.1",
    "langchain-mcp-adapters==0.2.2",
    "redis>=7.3.0",
    "cloudpickle>=3.1.2",
    "python-multipart>=0.0.5",
]

[dependency-groups]
dev = [
    "ipykernel==7.2.0",
    "pre-commit==4.5.1",
    "ruff==0.15.9",
    "pytest-env==1.6.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-snapshot",
    "pytest-mock==3.15.1",
    "coverage==7.13.5",
    "pytest-cov==7.1.0"
]

[tool.uv]

[[tool.uv.index]]
name = "pypy"
url = "https://pypi.org/simple"

[tool.ruff]
target-version = "py313"
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E701"] # line too long, multiple statements on one line

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --verbose --tb=short -ra --cov=app"
pythonpath = ["app/"]
testpaths = [
    "tests"]
markers = [
    "integration: mark a test as a integration test",
    "unit: mark test as a unit test"
]
env = [
    "MUCGPT_CORE_LOG_CONFIG=app/logconf.yaml",
    "MUCGPT_CORE_VERSION=0.0",
    "MUCGPT_CORE_COMMIT=12012lf",
    '''MUCGPT_CORE_MODELS=[{{"type": "AZURE", "llm_name": "mucgpt-test-model", "deployment": "mucgpt-test-model", "endpoint": "https://testprovider.api", "api_key": "blub", "max_output_tokens": 16384, "max_input_tokens": 128000, "description": "Model developed by kicc. "}}]''',
    "GIT_PYTHON_REFRESH=quiet"
]

[tool.coverage.paths]
source = ["scripts", "app"]

[tool.coverage.report]
show_missing = true
