[project]
name = "mucgpt-data-service"
version = "0.1.0"
description = "MucGPT data processing service"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "truststore>=0.10.4",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.5",
]
