[project]
name = "mucgpt-data-service"
version = "0.1.0"
description = "MUCGPT memory service"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "python-dotenv>=1.0.1",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.9.1",
    "pyyaml>=6.0.3",
    "truststore>=0.10.4",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.1.5",
    "httpx>=0.28.1",
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py313"
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E701"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --verbose --tb=short -ra --cov=app"
pythonpath = ["app/"]
testpaths = ["tests"]
markers = [
    "integration: mark a test as an integration test",
    "unit: mark a test as a unit test",
]
env = [
    "LOG_CONFIG=app/logconf.yaml",
    "KREUZBERG_URL=http://kreuzberg-test:8000",
    "PARSER_BACKEND=kreuzberg",
]
